fix editor header linewrap

--- a/src/c3nav/editor/static/editor/css/editor.scss
+++ b/src/c3nav/editor/static/editor/css/editor.scss
@@ -24,6 +24,8 @@ body {
     font-size: 30px;
     font-weight: 300;
     letter-spacing: -.1rem;
+    position: absolute;
+    white-space: nowrap;
 }
 .navbar-brand img {
     height: 50px;
